# qr_barcode_scanner

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
